--- a/exercicios/Modulo 3 - Desafios/Cordel/index.html
+++ b/exercicios/Modulo 3 - Desafios/Cordel/index.html
@@ -13,7 +13,7 @@
         <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank"> <strong>Milton Duarte</strong> </a></p>
     </header>
 
-    <section class="branco">
+    <section class="normal">
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
@@ -25,7 +25,7 @@
         </p>
     </section>
  <br>
-    <section class="image1">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -37,7 +37,7 @@
         </p>
     </section>
    
-    <section class="branco">
+    <section class="normal">
         <p>
             Arroba agora não pesa <br>
             É parte de um endereço <br>
@@ -56,7 +56,7 @@
         </p>
     </section>
 
-    <section class="image2">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -68,7 +68,7 @@
         </p>
     </section>
 
-    <section class="branco">
+    <section class="normal">
         <p>
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
