--- a/exercicios/Modulo 3 - Desafios/Cordel/index.html
+++ b/exercicios/Modulo 3 - Desafios/Cordel/index.html
@@ -90,7 +90,7 @@
     <footer>
         <p>
             Site desenvolvido por <a href="https://github.com/RicardoJuniorNC" target="_blank"> <strong>Ricardo Jr.</strong></a> para <a href="https://www.cursoemvideo.com/" target="_blank"> <strong>CursoemVideo</strong></a> <br>
-            ©️ Copyright all reserved 2023🇹🇲
+            ©️ Copyright all reserved 2023™️
         </p>
     </footer>
 </body>
