--- a/exercicios/EX024/iframe002.html
+++ b/exercicios/EX024/iframe002.html
@@ -23,7 +23,7 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum molestias, enim ipsa sapiente sequi illum neque culpa accusantium repellat voluptate eaque consequatur cupiditate mollitia aut exercitationem dolorem eos excepturi distinctio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam officiis a enim eum commodi odit neque consectetur libero nostrum assumenda quia, consequuntur maxime, ducimus quos possimus quisquam ad nemo iste.</p>
 
-    <iframe src="pag001.html" 
+    <iframe src="paginas-extras/pag001.html" 
     frameborder="1">
     </iframe>
 
