--- a/exercicios/EX024/iframe001.html
+++ b/exercicios/EX024/iframe001.html
@@ -18,7 +18,7 @@
     </h1>
     <p>
         Acessando o site do 
-        <iframe src="https://www.cursoemvideo.com/" height="500px" width="350px">
+        <iframe src="/https://www.cursoemvideo.com/" height="500px" width="350px">
             <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a>
         </iframe> 
         me para aprender a programar.
