--- a/exercicios/EX025/form010.html
+++ b/exercicios/EX025/form010.html
@@ -7,13 +7,30 @@
     <title>Formulários</title>
 </head>
 <body>
+    <h1>
+        Output Formulários
+    </h1>
     <form action="cadastro.php" method="get" autocomplete="on">
-            
+        <p>
+            <label for="iano">Em que ano você nasceu? </label>
+            <input type="number" name="ano" id="iano" min="1900" max="2023" oninput="calcIdade()">
+        </p>
+        <p>
+            <label for="iidade">Sua idade atual é: </label>
+            <output id="iidade">0</output>
+        </p>
             
         <p>
             <input type="reset" value="Limpar">
             <input type="submit" value="Enviar">
         </p>
         </form>
+
+        <script>
+            function calcIdade() {
+                let atual = new Date ().getFullYear()
+                iidade.innerHTML = Number(atual) - Number(iano.value)
+            }
+        </script>
 </body>
 </html>
