--- a/exercicios/EX026/MQ004/index.html
+++ b/exercicios/EX026/MQ004/index.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Queries</title>
-    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/style.css" media="all">
     <link rel="stylesheet" href="estilos/media-query.css"
     >
 </head>
 <body>
     <main>    
-    <h1>Testando Midia Queries</h1>
-    <img id="phone" src="imagens/icon-phone.png" alt="phone">
-    <img id="print" src="imagens/icon-print.png" alt="print">
-    <img id="pc" src="imagens/icon-pc.png" alt="pc">
-    <img id="tablet" src="imagens/icon-tablet.png" alt="tablet">
-    <img id="tv" src="imagens/icon-tv.png" alt="tv">
-</main>
+        <h1>Testando Midia Query</h1>
+        
+        <img id="phone" src="imagens/icon-phone.png" alt="acessando via telefone">
+        <img id="print" src="imagens/icon-print.png" alt="versao para impressao ">
+        <img id="pc" src="imagens/icon-pc.png" alt="acessando via pc">
+        <img id="tablet" src="imagens/icon-tablet.png" alt="acessando via tablet">
+        <img id="tv" src="imagens/icon-tv.png" alt="acessando via tv ou telas grandes">
+    </main>
 </body>
 </html>
